src/styles/main.scss
.content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

// TITLE IMAGE

// .image-container {
//   text-align: center;
// }

.title-image {
  height: auto;
  width: 1000px;
}

// FORM

.form-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.player-name-input {
  font-family: inherit;
  width: 100%;
  border: 0;
  border-bottom: 2px solid gray;
  outline: 0;
  font-size: 1.3rem;
  color: black;
  padding: 7px 0;
  background: transparent;
  transition: border-color 0.2s;

  &::placeholder {
    color: transparent;
  }

  &:placeholder-shown ~ .player-name-label {
    font-size: 1.3rem;
    cursor: text;
    top: 20px;
  }
}

.player-name-input:focus {
  ~ .player-name-label {
    position: absolute;
    top: 0;
    display: block;
    transition: 0.2s;
    font-size: 1rem;
    color: primary;
    font-weight: 700;
  }
  padding-bottom: 6px;
  font-weight: 700;
  border-width: 3px;
  border-image: linear-gradient(to right, primary, secondary);
  border-image-slice: 1;
}

.player-name-input {
  &:required,
  &:invalid {
    box-shadow: none;
  }
}

body {
  font-family: "Poppins", sans-serif;
  display: flex;
  flex-direction: column;
  // justify-content: center;
  align-items: center;
  min-height: 100vh;
  font-size: 1.5rem;
  background-color: white;
}

.player-name-button {
  width: 50px;
}

// DISPLAY

.display {
  background-color: rgb(199, 184, 184);
  height: 80px;
  width: 1000px;
  border-radius: 10px;
  line-height: 80px;
  padding-left: 20px;
  border: 2px solid black;
}

// BOARDS

.boards-outer-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.boards-container {
  display: flex;
  gap: 100px;
  justify-content: center;
  font-size: 1rem;
}

.grid-container {
  display: grid;
  grid-template-rows: repeat(10, 40px);
  grid-template-columns: repeat(10, 40px);
  // background-color: rgb(241, 240, 240);
  background-color: white;
  border: 1px solid black;
  position: relative;
}

.grid-container > div {
  border: 1px solid black;
  position: relative;
}

.square {
  cursor: pointer;
  color: transparent;
}

.dot {
  width: 20px;
  height: 20px;
  border-radius: 50%;
  margin-top: 10px;
  margin-left: 9px;
}

.red-dot {
  background-color: red;
}

.black-dot {
  background-color: black;
}

.axis-button {
  background: #fff;
  backface-visibility: hidden;
  border-radius: 0.375rem;
  border-style: solid;
  border-width: 0.125rem;
  box-sizing: border-box;
  color: #212121;
  cursor: pointer;
  display: inline-block;
  font-family: Circular, Helvetica, sans-serif;
  font-size: 1.125rem;
  font-weight: 700;
  letter-spacing: -0.01em;
  line-height: 1.3;
  padding: 0.875rem 1.125rem;
  position: relative;
  text-align: left;
  text-decoration: none;
  transform: translateZ(0) scale(1);
  transition: transform 0.2s;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.axis-button:not(:disabled):hover {
  transform: scale(1.05);
}

.axis-button:not(:disabled):hover:active {
  transform: scale(1.05) translateY(0.125rem);
}

.axis-button:focus {
  outline: 0 solid transparent;
}

.axis-button:focus:before {
  content: "";
  left: calc(-1 * 0.375rem);
  pointer-events: none;
  position: absolute;
  top: calc(-1 * 0.375rem);
  transition: border-radius;
  user-select: none;
}

.axis-button:focus:not(:focus-visible) {
  outline: 0 solid transparent;
}

.axis-button:focus:not(:focus-visible):before {
  border-width: 0;
}

.axis-button:not(:disabled):active {
  transform: translateY(0.125rem);
}

// WINNER CONTAINER

.winner-container {
  position: absolute;
  background-color: rgb(228, 195, 195);
  border: 2px solid black;
  height: 300px;
  width: 1000px;
  border-radius: 10px;
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-top: 300px;
}

.winner-display {
  background-color: rgb(113, 187, 126);
  height: 80px;
  width: 800px;
  border-radius: 10px;
  padding-left: 20px;
  border: 2px solid black;
  line-height: 80px;
}

.highlight {
  background-color: rgba(0, 0, 255, 0.5);
}

.ship-image {
  position: absolute;
  z-index: 1;
  width: 100px;
  height: auto;
  opacity: 0.4;
  top: -2px;
}

.vertical {
  transform: rotate(90deg);
  transform-origin: top left;
}

#ship1.vertical {
  left: 50px;
  bottom: 40px;
}

#ship2.vertical {
  left: 50px;
  bottom: 40px;
}

#ship3.vertical {
  left: 50px;
  bottom: 40px;
}

#ship4.vertical {
  left: 50px;
  bottom: 40px;
}

#ship5.vertical {
  left: 50px;
  bottom: 40px;
}

